# LeftOverDetection

./: .gitignore  README.md  main.py  pyproject.toml
data/: menu.csv
src/leftover_detection/: __init__.py  categorization.py  cli.py  llm.py  menu.py  models.py  pipeline.py  report.py  server.py  storage.py  vlm.py
src/leftover_detection/static/: app.js  style.css
src/leftover_detection/templates/: index.html
tests/: test_categorization.py  test_pipeline.py
